fixing gap

--- a/src/dashboard/style/assessments.css
+++ b/src/dashboard/style/assessments.css
@@ -3,7 +3,6 @@
   margin-left: 15px;
   height: 316px;
   width: 100%;
-  min-width: 700px;
   background-color: white;
   padding-left: 24px;
   padding-right: 20px;
@@ -18,6 +17,7 @@
 .assessments-box .headings {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .assessments-box .assessment-h1 {
   font-size: 10px;
@@ -30,14 +30,12 @@
   font-size: 10px;
   color: #9BA5B7;
   margin-top: 15px;
-  margin-left: 101px;
   height: 16px;
 }
 .assessments-box .assessment-h3 {
   font-size: 10px;
   color: #9BA5B7;
   margin-top: 15px;
-  margin-left: 372px;
   height: 16px;
 }
 .assessments-box .assessment-item {
@@ -65,17 +63,18 @@
 }
 .assessments-box .class-container {
   margin-left: 60px;
-  width: 570px;
+  width: 83%;
   height: 57px;
   border-radius: 10px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0) 0px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .assessments-box .class-container:hover {
   margin-left: 60px;
-  width: 570px;
+  width: 83%;
   height: 57px;
   border-radius: 10px;
   background-color: #FAFAFF;
@@ -93,7 +92,6 @@
   color: #9BA5B7;
 }
 .assessments-box .time-container {
-  margin-left: 190px;
   width: 100px;
   height: 24px;
   border-radius: 11px;
